--- a/BlazorHRM.Api/Properties/launchSettings.json
+++ b/BlazorHRM.Api/Properties/launchSettings.json
@@ -1,6 +1,7 @@
 {
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "BlazorHRM": {
+    "BlazorHRM.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
