--- a/BlazorHRM/BlazorHRM.csproj
+++ b/BlazorHRM/BlazorHRM.csproj
@@ -15,11 +15,13 @@
     <None Remove="Models\" />
     <None Remove="Components\" />
     <None Remove="Components\Widgets\" />
+    <None Remove="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Components\" />
     <Folder Include="Components\Widgets\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BethanysPieShopHRM.Shared\BlazorHRM.Shared.csproj">
